--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
  <body>
      <div class="titleBar">
         <h2>Bok Choy Fans United</h2>
-      </div>
-     <div class="signupForm">
-       <form action="#" method="get" onsubmit="submit">
-          <label for="userFName">First Name: </label> 
-          <input type="text" name="userF" id="userFName">
-          <label for="userLName">Last Name: </label>
-          <input type="text" name="userL" id="userLName">
-          <input type="submit" name="signupBtn" value="Sign-Up">
-       </form>
+     </div>
+	 <div class="signupFormWrap">
+		 <div class="signupForm">
+		   <form action="#" method="get" onsubmit="submit">
+			  <label for="userFName">First Name: </label> 
+			  <input type="text" name="userF" id="userFName">
+			  <label for="userLName">Last Name: </label>
+			  <input type="text" name="userL" id="userLName">
+			  <input type="submit" name="signupBtn" value="Sign-Up">
+		   </form>
+		 </div>
+	 </div>
 </body>
 </html>
