Create page layout; add email input to form; add content to left section
[Lines  14, 15, 27]: Created three divs. Page is a div that takes up the entire window. Divided equally into two subdivs, left and right; both 50% wide and 100% tall.
[Lines 37-38]: Email input added.
[Lines 16-26] Content added to "pageLeft" div. Appears to the left of the sign-up form.

--- a/index.html
+++ b/index.html
@@ -11,16 +11,35 @@
      <div class="titleBar">
         <h2>Bok Choy Fans United</h2>
      </div>
-	 <div class="signupFormWrap">
-		 <div class="signupForm">
-		   <form action="#" method="get" onsubmit="submit">
-			  <label for="userFName">First Name: </label> 
-			  <input type="text" name="userF" id="userFName">
-			  <label for="userLName">Last Name: </label>
-			  <input type="text" name="userL" id="userLName">
-			  <input type="submit" name="signupBtn" value="Sign-Up">
-		   </form>
-		 </div>
-	 </div>
+	 <div class="page">
+	   <div class="pageLeft">
+			<h1>Benefits of Eating Bok Choy</h1>
+			<ul>
+			  <li>Anti-cancer Properties</li>
+			  <li>Healthy Bones</li>
+			  <li>Improvement in Cardiovascular Health</li>
+			  <li>Lower Blood Pressure</li>
+			  <li>Anti-Anemia</li>
+			  <li>Healthy Digestion</li>
+			</ul>
+			<p>Partial list from <a href="https://www.naturalfoodseries.com/11-health-benefits-bok-choy/">naturalfoodseries.com</href></p>
+	   </div>
+	   <div class="pageRight">
+		 <div class="signupFormWrap">
+		   <div class="signupForm">
+			 <h2>Sign-Up for our Newsletter!</h2>
+			   <form action="#" method="get" onsubmit="submit">
+				  <label for="userFName">First Name: </label> 
+				  <input type="text" name="userF" id="userFName">
+				  <label for="userLName">Last Name: </label>
+				  <input type="text" name="userL" id="userLName">
+				  <label for="emailIn">E-Mail: </label>
+				  <input type="text" name="userEmail" id="emailIn">
+				  <input type="submit" name="signupBtn" value="Sign-Up">
+			   </form>
+			 </div>
+		</div>
+	   </div>
+	  </div>
 </body>
 </html>
