[Lines 43-49]Added New Section
New Fan of the Month section under the sign-up form

--- a/index.html
+++ b/index.html
@@ -13,33 +13,40 @@
      </div>
 	 <div class="page">
 	   <div class="pageLeft">
-			<h1>Benefits of Eating Bok Choy</h1>
-			<ul>
-			  <li>Anti-cancer Properties</li>
-			  <li>Healthy Bones</li>
-			  <li>Improvement in Cardiovascular Health</li>
-			  <li>Lower Blood Pressure</li>
-			  <li>Anti-Anemia</li>
-			  <li>Healthy Digestion</li>
-			</ul>
-			<p>Partial list from <a href="https://www.naturalfoodseries.com/11-health-benefits-bok-choy/">naturalfoodseries.com</href></p>
+	     <img src="assets/images/bokchoy.jpg" alt="Bok Choy on table" width=700" height="400" border="4"></img>
+	     <h1>Benefits of Eating Bok Choy</h1>
+	     <ul>
+		<li>Anti-cancer Properties</li>
+		<li>Healthy Bones</li>
+		<li>Improvement in Cardiovascular Health</li>
+		<li>Lower Blood Pressure</li>
+		<li>Anti-Anemia</li>
+		<li>Healthy Digestion</li>
+	     </ul>
+	     <p>Partial list from <a href="https://www.naturalfoodseries.com/11-health-benefits-bok-choy/">naturalfoodseries.com</href></p>
 	   </div>
 	   <div class="pageRight">
-		 <div class="signupFormWrap">
-		   <div class="signupForm">
-			 <h2>Sign-Up for our Newsletter!</h2>
-			   <form action="#" method="get" onsubmit="submit">
-				  <label for="userFName">First Name: </label> 
-				  <input type="text" name="userF" id="userFName">
-				  <label for="userLName">Last Name: </label>
-				  <input type="text" name="userL" id="userLName">
-				  <label for="emailIn">E-Mail: </label>
-				  <input type="text" name="userEmail" id="emailIn">
-				  <input type="submit" name="signupBtn" value="Sign-Up">
-			   </form>
-			 </div>
-		</div>
+	     <div class="signupFormWrap">
+	       <div class="signupForm">
+	         <h2>Sign-Up for our Newsletter!</h2>
+		   <form action="#" method="get" onsubmit="submit">
+		     <label for="userFName">First Name: </label> 
+		     <input type="text" name="userF" id="userFName">
+		     <label for="userLName">Last Name: </label>
+		     <input type="text" name="userL" id="userLName">
+		     <label for="emailIn">E-Mail: </label>
+		     <input type="text" name="userEmail" id="emailIn">
+		     <input type="submit" name="signupBtn" value="Sign-Up">
+		    </form>
+	        </div>
+	      </div>
+	      <div class="fanMonth">
+	        <h2>Bok Choy Fan of the Month</h2>
+		<img src="assets/images/fanTalon.jpg" width="300" height="300"></img>
+		<h1>Talon the Hawk</h1>
+		<p>Bok Choy Consumption (2012): 52,531 Heads</p>
+	      </div>
 	   </div>
-	  </div>
+	</div>
 </body>
 </html>
