--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<li>Anti-Anemia</li>
 		<li>Healthy Digestion</li>
 	     </ul>
-	     <p>Partial list from <a href="https://www.naturalfoodseries.com/11-health-benefits-bok-choy/">naturalfoodseries.com</href></p>
+	     <p>Partial list from <a href="https://www.naturalfoodseries.com/11-health-benefits-bok-choy/">naturalfoodseries.com</a></p>
 	   </div>
 	   <div class="pageRight">
 	     <div class="signupFormWrap">
