--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      </div>
 	 <div class="page">
 	   <div class="pageLeft">
-	     <img src="assets/images/bokchoy.jpg" alt="Bok Choy on table" width=700" height="400" border="4"></img>
+	     <img src="assets/images/bokchoy.jpg" alt="Bok Choy on table" width=700px" height="400px">
 	     <h1>Benefits of Eating Bok Choy</h1>
 	     <ul>
 		<li>Anti-cancer Properties</li>
@@ -42,7 +42,7 @@
 	      </div>
 	      <div class="fanMonth">
 	        <h2>Bok Choy Fan of the Month</h2>
-		<img src="assets/images/fanTalon.jpg" width="300" height="300"></img>
+		<img src="assets/images/fanTalon.jpg" width="300px" height="300px" alt="Talon the Hawk">
 		<h1>Talon the Hawk</h1>
 		<p>Bok Choy Consumption (2012): 52,531 Heads</p>
 	      </div>
