--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      </div>
 	 <div class="page">
 	   <div class="pageLeft">
-	     <img src="assets/images/bokchoy.jpg" alt="Bok Choy on table" width=700px" height="400px">
+	     <img src="assets/images/bokchoy.jpg" alt="Bok Choy on table" width="700px" height="400px">
 	     <h1>Benefits of Eating Bok Choy</h1>
 	     <ul>
 		<li>Anti-cancer Properties</li>
