--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
     <script src="assets/js/scripts.js"></script>
     <title>Bok Choy Fans United</title>
-    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" media="screen" href="assets/style/style.css"/>
     <link rel="stylesheet" media="screen" href="assets/style/normalize.css"/>
  </head>
