[Line 32] Set form to run validation function on submit

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	     <div class="signupFormWrap">
 	       <div class="signupForm">
 	         <h2>Sign-Up for our Newsletter!</h2>
-		   <form action="#" method="get" onsubmit="submit">
+		   <form action="#" method="get" onsubmit="validateSignupInputs()">
 		     <label for="userFName">First Name: </label> 
 		     <input type="text" name="userF" id="userFName">
 		     <label for="userLName">Last Name: </label>
